--- a/contact.html
+++ b/contact.html
@@ -212,25 +212,25 @@
 								<div class="row">
 									<div class="col-xl-6">
 										<!-- Name -->
-										<label for="contact_name">First Name*</label>
+										<label for="contact_name">Имя*</label>
 										<input type="text" id="contact_name" class="contact_input" required="required">
 									</div>
 									<div class="col-xl-6 last_name_col">
 										<!-- Last Name -->
-										<label for="contact_last_name">Last Name*</label>
+										<label for="contact_last_name">Фамилия*</label>
 										<input type="text" id="contact_last_name" class="contact_input" required="required">
 									</div>
 								</div>
 								<div>
 									<!-- Subject -->
-									<label for="contact_company">Subject</label>
+									<label for="contact_company">Тема</label>
 									<input type="text" id="contact_company" class="contact_input">
 								</div>
 								<div>
-									<label for="contact_textarea">Message*</label>
+									<label for="contact_textarea">Сообщение*</label>
 									<textarea id="contact_textarea" class="contact_input contact_textarea" required="required"></textarea>
 								</div>
-								<button class="button contact_button"><span>Send Message</span></button>
+								<button class="button contact_button"><span>Отправить сообщение</span></button>
 							</form>
 						</div>
 					</div>
@@ -240,23 +240,23 @@
 				<div class="col-lg-3 offset-xl-1 contact_col">
 					<div class="contact_info">
 						<div class="contact_info_section">
-							<div class="contact_info_title">Marketing</div>
+							<div class="contact_info_title">Маркетинг</div>
 							<ul>
-								<li>Phone: <span>+53 345 7953 3245</span></li>
+								<li>Телефон: <span>+7 978 000 0000</span></li>
 								<li>Email: <span>yourmail@gmail.com</span></li>
 							</ul>
 						</div>
 						<div class="contact_info_section">
-							<div class="contact_info_title">Shippiing & Returns</div>
+							<div class="contact_info_title">Доставка и возврат</div>
 							<ul>
-								<li>Phone: <span>+53 345 7953 3245</span></li>
+								<li>Телефон: <span>+7 978 000 0000</span></li>
 								<li>Email: <span>yourmail@gmail.com</span></li>
 							</ul>
 						</div>
 						<div class="contact_info_section">
 							<div class="contact_info_title">Information</div>
 							<ul>
-								<li>Phone: <span>+53 345 7953 3245</span></li>
+								<li>Телефон: <span>+7 978 000 0000</span></li>
 								<li>Email: <span>yourmail@gmail.com</span></li>
 							</ul>
 						</div>
