--- a/checkout.html
+++ b/checkout.html
@@ -295,7 +295,7 @@
 									<div>
 										<input type="checkbox" id="checkbox_newsletter" name="regular_checkbox" class="regular_checkbox">
 										<label for="checkbox_newsletter"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Subscribe to our newsletter</span>
+										<span class="checkbox_title">Подпишитесь на нашу рассылку</span>
 									</div>
 								</div>
 							</form>
