--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 							<nav class="main_nav">
 								<ul>
 									<li class="hassubs active">
-										<a href="index.html">Home</a>
+										<a href="index.html">Домой</a>
 										<ul>
-											<li><a href="categories.html">Categories</a></li>
-											<li><a href="product.html">Product</a></li>
-											<li><a href="cart.html">Cart</a></li>
-											<li><a href="checkout.html">Check out</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li><a href="categories.html">Категории</a></li>
+											<li><a href="product.html">Продукты</a></li>
+											<li><a href="cart.html">Корзина</a></li>
+											<li><a href="checkout.html">Оплатаt</a></li>
+											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="categories.html">Categories</a>
+										<a href="categories.html">Категории</a>
 										<ul>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
+											<li><a href="categories.html">1</a></li>
+											<li><a href="categories.html">2</a></li>
+											<li><a href="categories.html">3</a></li>
+											<li><a href="categories.html">4</a></li>
+											<li><a href="categories.html">5</a></li>
 										</ul>
 									</li>
 									<li><a href="#">Accessories</a></li>
