Another little update

--- a/categories.html
+++ b/categories.html
@@ -49,9 +49,9 @@
 											<li><a href="categories.html">5</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Accessories</a></li>
-									<li><a href="#">Offers</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="#">Аксессуары</a></li>
+									<li><a href="#">Предложения</a></li>
+									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_extra ml-auto">
