--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact</title>
+<title>Контакты</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
@@ -46,9 +46,9 @@
 											<li><a href="categories.html">5</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Accessories</a></li>
-									<li><a href="#">Offers</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="#">Аксессуары</a></li>
+									<li><a href="#">Предложения</a></li>
+									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_extra ml-auto">
@@ -184,8 +184,8 @@
 							<div class="home_content">
 								<div class="breadcrumbs">
 									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li>Contact</li>
+										<li><a href="index.html">Домой</a></li>
+										<li>Контакты</li>
 									</ul>
 								</div>
 							</div>
@@ -196,7 +196,7 @@
 		</div>
 	</div>
 
-	<!-- Contact -->
+	<!-- Контакты -->
 	
 	<div class="contact">
 		<div class="container">
@@ -236,7 +236,7 @@
 					</div>
 				</div>
 
-				<!-- Contact Info -->
+				<!-- Контакты Info -->
 				<div class="col-lg-3 offset-xl-1 contact_col">
 					<div class="contact_info">
 						<div class="contact_info_section">
