--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
 							<div class="home_content">
 								<div class="breadcrumbs">
 									<ul>
-										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html">Домой</a></li>
 										<li><a href="categories.html">Categories</a></li>
 										<li>Shopping Cart</li>
 									</ul>
