--- a/checkout.html
+++ b/checkout.html
@@ -46,9 +46,9 @@
 											<li><a href="categories.html">5</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Accessories</a></li>
-									<li><a href="#">Offers</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="#">Аксессуары</a></li>
+									<li><a href="#">Предложения</a></li>
+									<li><a href="contact.html">Контакты</a></li>
 								</ul>
 							</nav>
 							<div class="header_extra ml-auto">
@@ -184,7 +184,7 @@
 							<div class="home_content">
 								<div class="breadcrumbs">
 									<ul>
-										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html">Домой</a></li>
 										<li><a href="cart.html">Shopping Cart</a></li>
 										<li>Checkout</li>
 									</ul>
