Another translate Update

--- a/cart.html
+++ b/cart.html
@@ -185,8 +185,8 @@
 								<div class="breadcrumbs">
 									<ul>
 										<li><a href="index.html">Домой</a></li>
-										<li><a href="categories.html">Categories</a></li>
-										<li>Shopping Cart</li>
+										<li><a href="categories.html">Категории</a></li>
+										<li>Корзина</li>
 									</ul>
 								</div>
 							</div>
@@ -206,9 +206,9 @@
 					<!-- Column Titles -->
 					<div class="cart_info_columns clearfix">
 						<div class="cart_info_col cart_info_col_product">Product</div>
-						<div class="cart_info_col cart_info_col_price">Price</div>
-						<div class="cart_info_col cart_info_col_quantity">Quantity</div>
-						<div class="cart_info_col cart_info_col_total">Total</div>
+						<div class="cart_info_col cart_info_col_price">Цена</div>
+						<div class="cart_info_col cart_info_col_quantity">Количество</div>
+						<div class="cart_info_col cart_info_col_total">Всего</div>
 					</div>
 				</div>
 			</div>
@@ -223,7 +223,7 @@
 								<div><img src="images/cart_1.jpg" alt=""></div>
 							</div>
 							<div class="cart_item_name_container">
-								<div class="cart_item_name"><a href="#">Smart Phone Deluxe Edition</a></div>
+								<div class="cart_item_name"><a href="#">Смартфон Deluxe Edition</a></div>
 								<div class="cart_item_edit"><a href="#">Edit Product</a></div>
 							</div>
 						</div>
@@ -233,7 +233,7 @@
 						<div class="cart_item_quantity">
 							<div class="product_quantity_container">
 								<div class="product_quantity clearfix">
-									<span>Qty</span>
+									<span>Кол-во</span>
 									<input id="quantity_input" type="text" pattern="[0-9]*" value="1">
 									<div class="quantity_buttons">
 										<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
@@ -253,8 +253,8 @@
 					<div class="cart_buttons d-flex flex-lg-row flex-column align-items-start justify-content-start">
 						<div class="button continue_shopping_button"><a href="#">Continue shopping</a></div>
 						<div class="cart_buttons_right ml-lg-auto">
-							<div class="button clear_cart_button"><a href="#">Clear cart</a></div>
-							<div class="button update_cart_button"><a href="#">Update cart</a></div>
+							<div class="button clear_cart_button"><a href="#">Очистить корзину</a></div>
+							<div class="button update_cart_button"><a href="#">Обновить</a></div>
 						</div>
 					</div>
 				</div>
@@ -264,35 +264,35 @@
 					
 					<!-- Delivery -->
 					<div class="delivery">
-						<div class="section_title">Shipping method</div>
-						<div class="section_subtitle">Select the one you want</div>
+						<div class="section_title">Способ доставки</div>
+						<div class="section_subtitle">Выберите тот, который вам нужен</div>
 						<div class="delivery_options">
-							<label class="delivery_option clearfix">Next day delivery
+							<label class="delivery_option clearfix">Доставка на следующий день
 								<input type="radio" name="radio">
 								<span class="checkmark"></span>
 								<span class="delivery_price">$4.99</span>
 							</label>
-							<label class="delivery_option clearfix">Standard delivery
+							<label class="delivery_option clearfix">Стандартная доставка
 								<input type="radio" name="radio">
 								<span class="checkmark"></span>
 								<span class="delivery_price">$1.99</span>
 							</label>
-							<label class="delivery_option clearfix">Personal pickup
+							<label class="delivery_option clearfix">Личный самовывоз
 								<input type="radio" checked="checked" name="radio">
 								<span class="checkmark"></span>
-								<span class="delivery_price">Free</span>
+								<span class="delivery_price">Свободный</span>
 							</label>
 						</div>
 					</div>
 
 					<!-- Coupon Code -->
 					<div class="coupon">
-						<div class="section_title">Coupon code</div>
-						<div class="section_subtitle">Enter your coupon code</div>
+						<div class="section_title">Код купона</div>
+						<div class="section_subtitle">Введите код купона</div>
 						<div class="coupon_form_container">
 							<form action="#" id="coupon_form" class="coupon_form">
 								<input type="text" class="coupon_input" required="required">
-								<button class="button coupon_button"><span>Apply</span></button>
+								<button class="button coupon_button"><span>Подать заявление</span></button>
 							</form>
 						</div>
 					</div>
@@ -300,20 +300,20 @@
 
 				<div class="col-lg-6 offset-lg-2">
 					<div class="cart_total">
-						<div class="section_title">Cart total</div>
-						<div class="section_subtitle">Final info</div>
+						<div class="section_title">Всего в корзине</div>
+						<div class="section_subtitle">Окончательная информация</div>
 						<div class="cart_total_container">
 							<ul>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Subtotal</div>
+									<div class="cart_total_title">Промежуточный итог</div>
 									<div class="cart_total_value ml-auto">$790.90</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Shipping</div>
-									<div class="cart_total_value ml-auto">Free</div>
+									<div class="cart_total_title">Перевозки</div>
+									<div class="cart_total_value ml-auto">Свободный</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Total</div>
+									<div class="cart_total_title">Всего</div>
 									<div class="cart_total_value ml-auto">$790.90</div>
 								</li>
 							</ul>
@@ -336,7 +336,7 @@
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
