--- a/categories.html
+++ b/categories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Categories</title>
+<title>Категории</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
@@ -185,7 +185,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="home_title">Smart Phones<span>.</span></div>
+								<div class="home_title">Смартфоны<span>.</span></div>
 								<div class="home_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</p></div>
 							</div>
 						</div>
@@ -213,7 +213,7 @@
 										<i class="fa fa-chevron-down" aria-hidden="true"></i>
 										<ul>
 											<li class="product_sorting_btn" data-isotope-option='{ "sortBy": "original-order" }'><span>Default</span></li>
-											<li class="product_sorting_btn" data-isotope-option='{ "sortBy": "price" }'><span>Price</span></li>
+											<li class="product_sorting_btn" data-isotope-option='{ "sortBy": "price" }'><span>Цена</span></li>
 											<li class="product_sorting_btn" data-isotope-option='{ "sortBy": "stars" }'><span>Name</span></li>
 										</ul>
 									</li>
@@ -233,7 +233,7 @@
 							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
 							<div class="product_extra product_new"><a href="categories.html">New</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -243,7 +243,7 @@
 							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Sale</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$520</div>
 							</div>
 						</div>
@@ -252,7 +252,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_3.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$710</div>
 							</div>
 						</div>
@@ -261,7 +261,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_4.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$330</div>
 							</div>
 						</div>
@@ -270,7 +270,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_5.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$170</div>
 							</div>
 						</div>
@@ -280,7 +280,7 @@
 							<div class="product_image"><img src="images/product_6.jpg" alt=""></div>
 							<div class="product_extra product_hot"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$240</div>
 							</div>
 						</div>
@@ -289,7 +289,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_7.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$70</div>
 							</div>
 						</div>
@@ -299,7 +299,7 @@
 							<div class="product_image"><img src="images/product_8.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$490</div>
 							</div>
 						</div>
@@ -309,7 +309,7 @@
 							<div class="product_image"><img src="images/product_9.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$410</div>
 							</div>
 						</div>
@@ -319,7 +319,7 @@
 							<div class="product_image"><img src="images/product_10.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$365</div>
 							</div>
 						</div>
@@ -329,7 +329,7 @@
 							<div class="product_image"><img src="images/product_11.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$195</div>
 							</div>
 						</div>
@@ -339,7 +339,7 @@
 							<div class="product_image"><img src="images/product_12.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$580</div>
 							</div>
 						</div>
@@ -438,7 +438,7 @@
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
