--- a/checkout.html
+++ b/checkout.html
@@ -314,7 +314,7 @@
 						<div class="order_list_container">
 							<div class="order_list_bar d-flex flex-row align-items-center justify-content-start">
 								<div class="order_list_title">Product</div>
-								<div class="order_list_value ml-auto">Total</div>
+								<div class="order_list_value ml-auto">Всего</div>
 							</div>
 							<ul class="order_list">
 								<li class="d-flex flex-row align-items-center justify-content-start">
@@ -330,7 +330,7 @@
 									<div class="order_list_value ml-auto">Free</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="order_list_title">Total</div>
+									<div class="order_list_title">Всего</div>
 									<div class="order_list_value ml-auto">$59.90</div>
 								</li>
 							</ul>
@@ -378,7 +378,7 @@
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
