--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-										<div class="home_slider_title">A new Online Shop experience.</div>
+										<div class="home_slider_title">Новый опыт.</div>
 										<div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
 										<div class="button button_light home_button"><a href="#">Shop Now</a></div>
 									</div>
@@ -209,7 +209,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-										<div class="home_slider_title">A new Online Shop experience.</div>
+										<div class="home_slider_title">Новый опыт.</div>
 										<div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
 										<div class="button button_light home_button"><a href="#">Shop Now</a></div>
 									</div>
@@ -227,7 +227,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-										<div class="home_slider_title">A new Online Shop experience.</div>
+										<div class="home_slider_title">Новый опыт.</div>
 										<div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
 										<div class="button button_light home_button"><a href="#">Shop Now</a></div>
 									</div>
@@ -272,13 +272,13 @@
 						<div>
 							<div class="avds_discount">
 								<div>20<span>%</span></div>
-								<div>Discount</div>
+								<div>Скидка</div>
 							</div>
 						</div>
 					</div>
 					<div class="avds_small_content">
-						<div class="avds_title">Smart Phones</div>
-						<div class="avds_link"><a href="categories.html">See More</a></div>
+						<div class="avds_title">Смартфоны</div>
+						<div class="avds_link"><a href="categories.html">Больше</a></div>
 					</div>
 				</div>
 			</div>
@@ -286,9 +286,9 @@
 				<div class="avds_background" style="background-image:url(images/avds_large.jpg)"></div>
 				<div class="avds_large_container">
 					<div class="avds_large_content">
-						<div class="avds_title">Professional Cameras</div>
+						<div class="avds_title">Профессиональные камеры</div>
 						<div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viver ra velit venenatis fermentum luctus.</div>
-						<div class="avds_link avds_link_large"><a href="categories.html">See More</a></div>
+						<div class="avds_link avds_link_large"><a href="categories.html">Больше</a></div>
 					</div>
 				</div>
 			</div>
@@ -309,7 +309,7 @@
 							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
 							<div class="product_extra product_new"><a href="categories.html">New</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -319,7 +319,7 @@
 							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Sale</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -328,7 +328,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_3.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -337,7 +337,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_4.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -346,7 +346,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_5.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -356,7 +356,7 @@
 							<div class="product_image"><img src="images/product_6.jpg" alt=""></div>
 							<div class="product_extra product_hot"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -365,7 +365,7 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_7.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -375,7 +375,7 @@
 							<div class="product_image"><img src="images/product_8.jpg" alt=""></div>
 							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
+								<div class="product_title"><a href="product.html">Смартфон</a></div>
 								<div class="product_price">$670</div>
 							</div>
 						</div>
@@ -398,7 +398,7 @@
 						<div class="avds_xl_content">
 							<div class="avds_title">Отличные устройства</div>
 							<div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus.</div>
-							<div class="avds_link avds_xl_link"><a href="categories.html">See More</a></div>
+							<div class="avds_link avds_xl_link"><a href="categories.html">Больше</a></div>
 						</div>
 					</div>
 				</div>
@@ -486,7 +486,7 @@
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
