--- a/checkout.html
+++ b/checkout.html
@@ -64,7 +64,7 @@
 													c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h45.2l26.9,302.3C412.8,445.2,392.1,462,366.8,462z"/>
 											</g>
 										</svg>
-										<div>Cart <span>(0)</span></div>
+										<div> Корзина <span>(0)</span></div>
 									</a>
 								</div>
 								<div class="search">
@@ -185,8 +185,8 @@
 								<div class="breadcrumbs">
 									<ul>
 										<li><a href="index.html">Домой</a></li>
-										<li><a href="cart.html">Shopping Cart</a></li>
-										<li>Checkout</li>
+										<li><a href="cart.html">Корзина</a></li>
+										<li>Оплата</li>
 									</ul>
 								</div>
 							</div>
@@ -206,19 +206,19 @@
 				<!-- Billing Info -->
 				<div class="col-lg-6">
 					<div class="billing checkout_section">
-						<div class="section_title">Billing Address</div>
-						<div class="section_subtitle">Enter your address info</div>
+						<div class="section_title">Платежный адрес</div>
+						<div class="section_subtitle">Введите ваш адрес</div>
 						<div class="checkout_form_container">
 							<form action="#" id="checkout_form" class="checkout_form">
 								<div class="row">
 									<div class="col-xl-6">
 										<!-- Name -->
-										<label for="checkout_name">First Name*</label>
+										<label for="checkout_name">Имя*</label>
 										<input type="text" id="checkout_name" class="checkout_input" required="required">
 									</div>
 									<div class="col-xl-6 last_name_col">
 										<!-- Last Name -->
-										<label for="checkout_last_name">Last Name*</label>
+										<label for="checkout_last_name">Фамилия*</label>
 										<input type="text" id="checkout_last_name" class="checkout_input" required="required">
 									</div>
 								</div>
