--- a/categories.html
+++ b/categories.html
@@ -35,7 +35,7 @@
 											<li><a href="categories.html">Категории</a></li>
 											<li><a href="product.html">Продукты</a></li>
 											<li><a href="cart.html">Корзина</a></li>
-											<li><a href="checkout.html">Оплатаt</a></li>
+											<li><a href="checkout.html">Оплата</a></li>
 											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
