--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 											<li><a href="categories.html">Категории</a></li>
 											<li><a href="product.html">Продукты</a></li>
 											<li><a href="cart.html">Корзина</a></li>
-											<li><a href="checkout.html">Оплатаt</a></li>
+											<li><a href="checkout.html">Оплата</a></li>
 											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
@@ -205,8 +205,8 @@
 				<!-- Get in touch -->
 				<div class="col-lg-8 contact_col">
 					<div class="get_in_touch">
-						<div class="section_title">Get in Touch</div>
-						<div class="section_subtitle">Say hello</div>
+						<div class="section_title">Оставайтесь на связи</div>
+						<div class="section_subtitle">Поздоровайтесь</div>
 						<div class="contact_form_container">
 							<form action="#" id="contact_form" class="contact_form">
 								<div class="row">
